--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,14 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/Config.php"
+        ]
     },
     "require": {
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "coffeecode/router": "1.0.*"
     },
     "require-dev": {
         "phpunit/phpunit": "9.2.5"
